# ThirdLab

./: CMakeLists.txt  ReadMe.md  allocator.h  clear_build.sh  linear_allocate_strategy.h  log.h  main.cpp  pool_allocate_strategy.h  vector.h
.github/workflows/: build.yaml
tests/: CMakeLists.txt  testmain.cpp
